--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <title>NESThair</title>
+        <title>Diāna</title>
         <link rel="stylesheet" href="style.css" type="text/css" media="screen">
     </head>
     <body>
