--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
                 <ul>
                         <li>
                            <span>令和5年07月25日</span>
-                         伝統文化セミナー基礎講座 開催のお知らせ(令和5年8月25日）
+                         伝統文化セミナー基礎講座 開催のお知らせ（令和5年8月25日）
                         </li>
                         <li>
                         <span>令和5年07月14日</span>
-                        神社本庁の代表役員について(控訴審判決)
+                        職業相談＆企業説明・面接会
                         </li>
                         <li>
                         <span>令和5年06月01日</span>
-                        BSフジ『鎮守の森の物語』放送のご案内
+                        キャリアアップ講習会・職業訓練募集説明会
                         </li>
                         <li>
                             <span>令和5年05月10日</span>
-                            「神社における新型コロナウイルス感染症対策ガイドライン」の廃止について
+                            「新型コロナウイルス感染症対策ガイドライン」の廃止について。
                             </li>
                             <li>
                                 <span> 令和5年04月10日</span>
@@ -64,23 +64,23 @@
                                 </li>
                                 <li>
                                     <span>令和5年02月27日</span>
-                                    神社本庁公式YouTubeチャンネルに神社参拝動画「参拝の心とかたち」を追加しました。
+                                    神社本庁が公式YouTubeチャンネルに神社参拝動画「参拝の心とかたち」を追加しました。
                                     </li>
                                     <li>
                                         <span>令和5年01月23日</span>
-                                        神社本庁の代表役員について(東京地裁判決)に判決文を追加しました。
+                                        人生相談・弁護士さんと出来ます。
                                         </li>
                                         <li>
                                             <span> 令和4年12月27日</span>
-                                            神社本庁の代表役員について(東京地裁判決)
+                                            役員の交代についてのおしらせ。
                                             </li>
                                             <li>
                                                 <span> 令和4年10月26日</span>
-                                                神社本庁の代表役員について（続報）
+                                                役員会招集のお知らせ。
                                                 </li>
                                                 <li>
                                                 <span>令和4年08月22日</span>
-                                                神社本庁の代表役員について
+                                                代表役員について。
                                                 </li>
                 </ul>
             </div>
