--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <header>
                 <h1>
                     <a href="index.html"
-            ><img class="logo" src="images/logo.png" alt="新時代の女性の働き方を提案するサイト"/></a>
+            ><img class="logo" src="images/logo.png" alt="logo/png"/></a>
                     <span>Diāna</span>
                 </h1>
                 <nav>
