--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
             <!-- ヘッダーここから -->
             <header>
                 <h1>
+                      新時代の女性の働き方を提案するサイト
+                    <br>
                     <span>Diāna</span>
                 </h1>
                 <nav>
